--- a/backend/package.json
+++ b/backend/package.json
@@ -9,8 +9,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bluebird": "^3.5.1",
     "koa": "^2.5.0",
     "koa-body": "^2.5.0",
-    "koa-router": "^7.4.0"
+    "koa-router": "^7.4.0",
+    "md5": "^2.2.1",
+    "mongodb": "^3.0.3",
+    "mongoose": "^5.0.7",
+    "uuid": "^3.2.1"
   }
 }
