--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "md5": "^2.2.1",
     "mongodb": "^3.0.3",
     "mongoose": "^5.0.7",
+    "socket.io": "^2.0.4",
     "uuid": "^3.2.1"
   }
 }
