--- a/multiplayertestneu.csproj
+++ b/multiplayertestneu.csproj
@@ -259,9 +259,6 @@
     <Reference Include="SyntaxTree.VisualStudio.Unity.Bridge">
       <HintPath>C:/Program Files (x86)/Microsoft Visual Studio Tools for Unity/15.0/Editor/SyntaxTree.VisualStudio.Unity.Bridge.dll</HintPath>
     </Reference>
-    <Reference Include="Newtonsoft.Json">
-      <HintPath>Assets/314 Arts/MarsFPSKit/Photon Unity Networking/Editor/PhotonNetwork/Newtonsoft.Json.dll</HintPath>
-    </Reference>
     <Reference Include="Photon3Unity3D">
       <HintPath>Assets/314 Arts/MarsFPSKit/Plugins/Photon3Unity3D.dll</HintPath>
     </Reference>
@@ -273,6 +270,24 @@
     </Reference>
     <Reference Include="AssetStoreToolsExtra">
       <HintPath>Assets/AssetStoreTools/Editor/AssetStoreToolsExtra.dll</HintPath>
+    </Reference>
+    <Reference Include="EngineIoClientDotNet">
+      <HintPath>Assets/Game/LoginSystem/Dlls/EngineIoClientDotNet.dll</HintPath>
+    </Reference>
+    <Reference Include="Newtonsoft.Json">
+      <HintPath>Assets/Game/LoginSystem/Dlls/Newtonsoft.Json.dll</HintPath>
+    </Reference>
+    <Reference Include="SocketIoClientDotNet">
+      <HintPath>Assets/Game/LoginSystem/Dlls/SocketIoClientDotNet.dll</HintPath>
+    </Reference>
+    <Reference Include="SuperSocket.ClientEngine">
+      <HintPath>Assets/Game/LoginSystem/Dlls/SuperSocket.ClientEngine.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Threading.Tasks.NET35">
+      <HintPath>Assets/Game/LoginSystem/Dlls/System.Threading.Tasks.NET35.dll</HintPath>
+    </Reference>
+    <Reference Include="WebSocket4Net">
+      <HintPath>Assets/Game/LoginSystem/Dlls/WebSocket4Net.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine.Advertisements">
       <HintPath>C:/Users/Tycho/AppData/LocalLow/Unity/cache/packages/packages.unity.com/com.unity.ads@2.0.3/UnityEngine.Advertisements.dll</HintPath>
